@@ -1,3 +1,4 @@
 Enrico Tröger <enrico(dot)troeger(at)uvena(dot)de>
 Bert Vermeulen <bert(at)biot(dot)com>
 Eugene Arshinov <earshinov(at)gmail(dot)com>
+Frank Lanitz <frank(at)frank(dot)uvena(dot)de>
