@@ -1,3 +1,9 @@
+2010-05-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * src/ao_xmltagging.[c|h]:
+   Add function for setting tags around a selection.
+
+
 2010-01-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/addons.c, src/ao_tasks.c, src/ao_tasks.h:
